# goofbind

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  build.rs  devenv.nix  package.json
.github/workflows/: build.yml  publish.yml
lib/: venbind.d.ts
node/: goofbind.d.ts  goofbind.js
node/test/: index.js
src/: errors.rs  js.rs  lib.rs  linux.rs  main.rs  structs.rs  windows.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/platform/linux/: wayland.rs  x11.rs
uiohook-sys/: build.rs
uiohook-sys/src/: lib.rs  windows.rs
