[package]
name = "venbind"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
uiohook-sys = { path = "./uiohook-sys" }
thiserror = "1.0"
futures = "0.3"
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1", features = ["x11", "xkb", "as-raw-xcb-connection"] }
xkbcommon = { version = "0.8", features = ["x11"] }
ashpd = { version = "0.11", features = ["wayland", "async-std"], default-features = false }

[features]
default = ["node"]
node = ["dep:napi", "dep:napi-build", "dep:napi-derive"]

[workspace]
members = ["./uiohook-sys"]

[build-dependencies]
napi-build = { version = "2", optional = true }
cmake = "0.1"
