[package]
name = "venbind"
version = "0.1.7"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
uiohook-sys = { path = "./uiohook-sys" }
thiserror = "1.0"
futures = "0.3"
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1", features = ["x11", "xkb", "as-raw-xcb-connection"] }
xkbcommon = { version = "0.8", features = ["x11"] }
ashpd = { version = "0.11", features = ["wayland", "async-std"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.1"
features = ["Win32_UI_Input_KeyboardAndMouse"]

[features]
default = ["node"]
node = ["dep:napi", "dep:napi-build", "dep:napi-derive"]

[workspace]
members = ["./uiohook-sys"]

[build-dependencies]
napi-build = { version = "2", optional = true }
cmake = "0.1"
