[package]
name = "goofbind"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", features = ["wayland", "async-io", "global_shortcuts"], default-features = false }
futures = "0.3"
rdev = "0.5.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.62", features = ["Win32_UI_Input_KeyboardAndMouse"]}

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = "z"
panic = "abort"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"